fixed plant 1 on mobile and fixed error in relation to className

--- a/src/mobile.css
+++ b/src/mobile.css
@@ -549,7 +549,7 @@
   .planet-1 {
     width: 100vw;
     height: 100vh;
-    grid-row: 2/5;
+    grid-row: 1/4;
     grid-column: 1/7;
     position: absolute;
     z-index: 10;
